# ChangeLog for gnustep-base/gnustep-base
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.58 2008/01/09 12:21:42 voyageur Exp $

*gnustep-base-1.15.2 (09 Jan 2008)

  09 Jan 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-base-1.15.2.ebuild:
  Add unstable version

*gnustep-base-1.14.2 (03 Jan 2008)

  03 Jan 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-base-1.14.2.ebuild:
  Stable version bump

  08 Dec 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/gnustep-base-1.12.0-obey_homedir.patch,
  -files/gnustep.initd-1.13.0, -files/config-gnustep-base.sh,
  -files/gnustep.initd, -gnustep-base-1.12.0.ebuild,
  -gnustep-base-1.13.0-r1.ebuild:
  Remove old versions

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> gnustep-base-1.14.0.ebuild:
  sparc stable wrt #195990

*gnustep-base-1.14.1 (19 Nov 2007)

  19 Nov 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-base-1.14.1.ebuild:
  Stable version bump

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> gnustep-base-1.14.0.ebuild:
  amd64 stable, bug 195990

  27 Oct 2007; nixnut <nixnut@gentoo.org> gnustep-base-1.14.0.ebuild:
  Stable on ppc wrt bug 195990

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  gnustep-base-1.14.0.ebuild:
  stable x86, bug 195990

  03 Oct 2007; Raúl Porcel <armin76@gentoo.org> gnustep-base-1.14.0.ebuild:
  Re-add ~sparc wrt #189372

  18 Sep 2007; Fabian Groffen <grobian@gentoo.org>
  gnustep-base-1.14.0.ebuild:
  Fix for bug #190744, make sure autogsdoc uses the just compiled gnustep-base
  library

  10 Sep 2007; Joseph Jezak <josejx@gentoo.org> gnustep-base-1.14.0.ebuild:
  Marked ~ppc for bug #189372.

  06 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/base-user-defaults.patch-1.10.0, -gnustep-base-1.10.3.ebuild,
  -gnustep-base-1.10.3-r1.ebuild:
  Remove old versions, bug #139385
